Homework9/manifests/PaymentService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework8paymentservice
  labels:
    app: homework8paymentservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: homework8paymentservice
  template:
    metadata:
      labels:
        app: homework8paymentservice
    spec:
      containers:
      - name: homework8paymentservice
        image: flash1200/homework8_paymentservice:firstversion
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
